refactor: 검색 기능 리펙토링